Bumped up dependency versions, fixed build & test issues with the latest dependency versions. Fixed compatibility with Java 9.